# ytb2pilipala

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: docker-image.yml
backend/: __init__.py
backend/app/: __init__.py  accounts.py  bilibili_upload.py  config.py  cover_generation.py  database.py  domain.py  main.py  models.py  repositories.py  schemas.py  subscriptions.py  youtube_cookies.py
backend/app/api/: __init__.py  accounts.py  assistant.py  health.py  settings.py  subscriptions.py  system.py  tasks.py  videos.py
backend/app/runner/: __init__.py  adapters.py  ai_adapter.py  download.py  dry_run.py  llm.py  manual_upload.py  processing.py  prompts.py  subtitles.py  tts.py  workflow.py
backend/tests/: conftest.py  test_accounts_api.py  test_ai_adapter.py  test_assistant_api.py  test_bilibili_upload.py  test_cover_generation.py  test_domain.py  test_download_runner.py  test_health.py  test_llm.py  test_processing_runner.py  test_repository.py  test_runner.py  test_subscriptions_api.py  test_subtitles.py  test_tasks_api.py  test_tts.py  test_videos_api.py
design-system/youtube-to-bilibili-workbench/: MASTER.md
design-system/youtube-to-bilibili-workbench/pages/: accounts.md  dashboard.md  settings.md  tasks.md
docs/superpowers/plans/: 2026-05-01-youtube-bilibili-workbench.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  styles.css  videoArtifacts.ts
(+30 files in other folders)
