[project]
name = "ytb2pilipala"
version = "0.1.0"
description = "YouTube to Bilibili dry-run workbench"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "qrcode[pil]>=7.4.0",
  "psutil>=6.0.0",
  "faster-whisper>=1.1.0",
  "openai>=1.40.0",
  "pysubs2>=1.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
include = ["backend*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
